# openab

./: AGENTS.md  AWESOME.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.native  Dockerfile.unified  config.toml.example
.github/: pull_request_template.md
.github/workflows/: ci-openab-agent.yml  docker-smoke-test.yml  e2e-agy-acp.yml  pending-decision.yml  platform-schema-conformance.yml  pr-bot-review.yml  pr-discussion-check.yml
agentcore-acp/: agentcore_acp.py
agy-acp/: Cargo.toml  README.md
agy-acp/src/: main.rs
charts/openab/: Chart.yaml  values.yaml
charts/openab/templates/: configmap.yaml
crates/openab-core/: Cargo.toml
crates/platform-schema/: Cargo.toml
crates/platform-schema/src/: lib.rs
crates/platform-schema/tests/: conformance.rs
docs/: agentcore.md  ambient.md  codex.md  config-reference.md  cronjob.md  devin.md  feishu.md  filestore.md  google-chat.md  hooks.md  image-tags.md  multi-agent.md  native-agent.md  oabctl.md  python.md  slash-commands.md  telegram.md
docs/adr/: ambient.md  control-directives.md  openab-agent-oauth.md  pr-contribution-guidelines.md  pr-review-loop.md
docs/refarch/: running-telegram-line-on-aws.md
docs/steering/: pr-review.md
gateway/: Cargo.toml
gateway/src/: main.rs
openab-agent/src/: acp.rs  agent.rs  auth.rs  llm.rs  main.rs  skills.rs
operator/: Cargo.toml  README.md
operator/src/: apply.rs  bootstrap.rs  create.rs  main.rs  scale.rs
src/: allow_list.rs  config.rs  ctl.rs  discord.rs  error_display.rs  main.rs  slack.rs  unified_adapter.rs
src/acp/: pool.rs
(+20 files in other folders)
